** file:line
*** scenario (or step within)
*** scenario outline
*** scenario outline examples
*** line in an example table
*** background (same as whole file)
*** fix bugs in any of those cases (there are some)
** --tags
*** Link to page about tags
* Tags with arguments
* cucumber.jar + examples
** Remove need for -S cucumber
** Full jar and simple jar

== Bugfixes
* Add support for using << in formatters to ensure the html formatter works (#210 Joseph Wilk)
* Explicitly require env.rb files first to avoid potential load order problems. (#213, Ben Mabey, Randy Harmon)
* Depend on polyglot version (0.2.4) to avoid masking require errors. (Aslak Hellesøy).
* -n option does not suppress the line info for a Scenario Outline (#175 Aslak Hellesøy)
* Errors with rspec-rails matchers in cucumber 0.1.99 (#173 David Chelimsky)
* Can't use an empty string as a table value in a scenario outline (#172 Aslak Hellesøy)
* Really skip skipped steps (#90 Aslak Hellesøy)
* No output for multi-line strings (#71 Aslak Hellesøy)
* Fix cucumber/formatters/unicode flaws on Windows (#145 Michael)
* Autotest-related Bugs: YAML missing (#136 Tobias Pape)
* Overeager "rescue LoadError" hides lots of errors (#137 Jonathan del Strother)
* Nested steps don't show mismatch (#116 Aslak Hellesøy)
* Pending steps in > steps called from steps (#65 Aslak Hellesøy)

=== New features
* New -S/--step-definitions option. Useful (among other things) for tools that implement automcompletion. (#208 Aslak Hellesøy).
* The cucumber.rake file defines a dummy :features task if Cucumber is not installed (#225 Josh Nichols)
* Added map_column to AST tables to ease casting of cell values into relevant types (#223 Rob Holland)
  Given /^an expense report for (.*) with the following posts:$/ do |date, posts_table|
    posts_table.map_column!('amount') { |a| a.to_i }
    posts_table.hashes.each do |post|
      # post['amount'] is a Fixnum, rather than a String
    end
  end