@@ -111,7 +111,7 @@ module Cucumber
           row.map do |cell|
             cell_with_replaced_args = cell
             arguments.each do |name, value|
-              cell_with_replaced_args = value ? cell_with_replaced_args.gsub(name, value) : nil
+              cell_with_replaced_args = value && !cell.nil? ? cell_with_replaced_args.gsub(name, value) : nil
             end
             cell_with_replaced_args
           end
